@@ -57,7 +57,7 @@ jobs:
       - name: Version Info
         id: version
         run: |
-          python3 CI/build_version.py
+          python3 scripts/build_version.py
           mkdir -p version-info && cd version-info && cmake .. && cd ..
           . ./version-info/version
           rm -rf version-info
